2003-04-16  Charles Iliya Krempeaux  <charles@reptile.ca>

	* gdk/EventKey.custom : Created it so that there
	  is a "Key" property that returns a Gdk.Key.

2003-04-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gtk/TreeView.custom:
	(GetPathAtPos): added 3 overloads of this method so that the caller
	does not need to create extra variables that may not use.

	* api/gtk-api.xml:
	* sources/Gtk.metadata: added pass_out attribute for tx and ty
	arguments of TreeView::WidgetToTreeCoords. Hide TreeView::GetPathAtPos.

2003-04-14  Charles Iliya Krempeaux  <charles@reptile.ca>

	* gtk-sharp.pc.in : Created to be used for the detection of
	  Gtk#.
	* parser/gapi.pc.in : Created to be used for the detection
	  of gapi.pl.
	* makefile : Deleted it.  (Actually, renamed it to Makefile.in.)
	* Makefile.in : Created it from the old makefile, and modified it
	  to account for gtk-sharp.pc.
	* configure.in : Made it so it will generate gtk-sharp.pc
	  from gtk-sharp.pc.in,  parser/gapi.pc from
	  parser/gapi.pc.in, and Makefile from Makefile.in.
	* parser/Makefile.in : Modified it to account for parser/gapi.pc.

2003-04-14  Lee Mallabone  <gnome@fonicmonkey.net>

	* api/gtk-api.xml, sources/Gtk.metadata, gtk/ColorSelection.custom:
	Fix up API in ColorSelection - Palette{From,To}String now work, and
	PreviousColor is now a C# property.
	
	* api/gdk-api.xml, sources/Gdk.metadata, gdk/Color.custom: Hide the
	Copy, Free and Hash methods in Gdk.Color and override GetHashCode().

2003-04-12  Alp Toker <alp@atoker.com>

	* parser/gen_keysyms: Generates a C# Key enum from the Gdk headers
	(gdkkeysyms.h)
	* gdk/Key.cs: The generated Key enum
	
2003-04-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glib/Object.cs:
	(GetObject): check that the target of the WeakReference is still there. Otherwise,
	create a new wrapper for the IntPtr.

	This fixes the random nullrefs when running nunit-gtk.

2003-04-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>
