@@ -1,0 +1,6 @@
+prefix=@prefix@
+
+
+Name: Gtk#
+Description: Gtk# - GNOME .NET Binding
+Version: @VERSION@
