@@ -1,3 +1,8 @@
+2003-04-25 Charles Iliya Krempeaux  <charles@reptile.ca>
+	* gtk-sharp.pc.in, parser/gapi.pc.in : Both of these
+	  files were checked in as empty files, before.  Checked
+	  them in, this time, with something in them.
+
 2003-04-16  Charles Iliya Krempeaux  <charles@reptile.ca>
 
 	* gdk/EventKey.custom : Created it so that there
